Fixed vh bug on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   flex-wrap: wrap;
 }
 .slide-out-menu-demo__intro {
